# imgui-ctru-rs

./: Cargo.toml  build.rs
examples/: test.rs
src/: imgui_citro3d.rs  imgui_ctru.rs  lib.rs  vshader.v.pica
