[package]
name = "imgui-ctru-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citro3d = { git = "https://github.com/rust3ds/citro3d-rs", version = "0.1.0" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs", version = "0.1.0" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs", version = "0.7.1" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs", version = "0.5.0" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs" } # unreleased version
